[package]
name = "spawns-executor"
version = "0.1.1"
readme.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Async executors for thread context task spawner"

[dependencies]
async-executor = "1.11.0"
async-shutdown = "0.2.2"
futures = { version = "0.3.30" }
spawns-core = { path = "../spawns-core", version = "1.1.0" }

[dev-dependencies]
async-io = "2.3.2"
async-net = "2.0.0"
futures-lite = "2.3.0"

[package.metadata.docs.rs]
all-features = true
