[package]
name = "spawns"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Async runtime agnostic thread context task spawner for Rust"

[features]
default = []
tokio = ["spawns-compat/tokio"]
smol = ["spawns-compat/smol"]
async-global-executor = ["spawns-compat/async-global-executor"]

[dependencies]
spawns-core = { path = "../spawns-core", version = "1.0.0" }
spawns-compat = { path = "../spawns-compat", version = "0.1.0", optional = true }
spawns-executor = { path = "../spawns-executor", version = "0.1.0" }

[dev-dependencies]
async-net = "2.0.0"
futures-lite = "2.3.0"
