[package]
name = "spawns"
version = "0.2.4"
readme.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Async runtime agnostic thread context task spawner for Rust"

[features]
default = []
executor = ["spawns-executor"]
tokio = ["spawns-compat/tokio"]
smol = ["spawns-compat/smol"]
async-global-executor = ["spawns-compat/async-global-executor"]
panic-multiple-global-spawners = ["spawns-core/panic-multiple-global-spawners"]

[dependencies]
spawns-core = { path = "../spawns-core", version = "1.1.1" }
spawns-compat = { path = "../spawns-compat", version = "0.2.1", optional = true }
spawns-executor = { path = "../spawns-executor", version = "0.1.1", optional = true }

[dev-dependencies]
async-net = "2.0.0"
futures-lite = "2.3.0"

[package.metadata.docs.rs]
all-features = true
